force-app/main/default/objects/genesis__Income__c/genesis__Income__c.object-meta.xml
<CustomObject>
    <description>This object will track the other income</description>
    <label>Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>