force-app/main/default/objects/genesis__Income__c/fields/Accntnt_ABN_Search_Condctd_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Accntnt_ABN_Search_Condctd_Warning_Check__c</fullName>
    <formula>IF(
 OR(
  ISPICKVAL(Party__r.Document_Type__c, &apos;Alt&apos;),
   AND(
    Party__r.Legal_Entity_Type__c == &apos;Individual&apos;,
    ISPICKVAL(Document_Type__c, &apos;Alt&apos;),
    Employment_Information__c != NULL
   )
  ),
 OR(
  ISPICKVAL(Accountant_ABN_Search_Conducted__c, &apos;No&apos;),
  ISPICKVAL(Accountant_ABN_Search_Conducted__c, &apos;&apos;)
 ),
 FALSE
)</formula>
    <label>Accntnt ABN Search Condctd Warning Check</label>
    <type>Checkbox</type>
</CustomField>