force-app/main/default/objects/genesis__Income__c/fields/Accountant_ABN_Search_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Accountant_ABN_Search_Conducted__c</fullName>
    <label>Accountant ABN Search Conducted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>