force-app/main/default/objects/genesis__Income__c/fields/Accountant_ABN_Status__c.field-meta.xml
<CustomField>
    <fullName>Accountant_ABN_Status__c</fullName>
    <label>Accountant ABN Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>