force-app/main/default/objects/genesis__Income__c/fields/Accountant_ABN_Status_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Accountant_ABN_Status_Warning_Check__c</fullName>
    <formula>IF(
OR(ISPICKVAL(Party__r.Document_Type__c, &apos;Alt&apos;),
AND(Party__r.Legal_Entity_Type__c == &apos;Individual&apos;,
ISPICKVAL(Document_Type__c, &apos;Alt&apos;),
Employment_Information__c != NULL)),
NOT(Accountant_ABN_Status__c == &apos;Active&apos;), (IF(
OR(ISPICKVAL(Employment_Information__r.Party__r.Document_Type__c, &apos;Alt&apos;),
AND(Employment_Information__r.Party__r.Legal_Entity_Type__c == &apos;Individual&apos;,
ISPICKVAL(Document_Type__c, &apos;Alt&apos;),
Employment_Information__c != NULL)),
NOT(Accountant_ABN_Status__c == &apos;Active&apos;), FALSE)))</formula>
    <label>Accountant ABN Status Warning Check</label>
    <type>Checkbox</type>
</CustomField>