force-app/main/default/objects/genesis__Income__c/fields/Accountant_Call__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Call__c</fullName>
    <label>Accountant Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>