force-app/main/default/objects/genesis__Income__c/fields/Accountant_Call_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Call_Commentary__c</fullName>
    <label>Accountant Call Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>