force-app/main/default/objects/genesis__Income__c/fields/Accountant_Call_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Call_Suitable__c</fullName>
    <label>Accountant Call Suitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>