force-app/main/default/objects/genesis__Income__c/fields/Accountant_Call_Suitable_Render__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Call_Suitable_Render__c</fullName>
    <description>Accountant Call Suitable Render</description>
    <formula>IF(OR(ISPICKVAL(Accountant_Call__c,&apos;No&apos;),ISPICKVAL(Accountant_Call__c,&apos;&apos;)),&apos;Not Render&apos;,&apos;Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Call Suitable Render</label>
    <type>Text</type>
</CustomField>