force-app/main/default/objects/genesis__Income__c/fields/Accountant_Call_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Call_Warning_Check__c</fullName>
    <formula>IF(OR(ISPICKVAL(Party__r.Document_Type__c, &apos;Alt&apos;),
AND(Party__r.Legal_Entity_Type__c == &apos;Individual&apos;,
ISPICKVAL(Document_Type__c, &apos;Alt&apos;),
Employment_Information__c != NULL)),
IF(ISPICKVAL(Accountant_Letter_Verified__c, &apos;Yes&apos;), OR(ISPICKVAL(Accountant_Call__c, &apos;No&apos;), ISPICKVAL(Accountant_Call__c, &apos;&apos;)), FALSE), IF(OR(ISPICKVAL(Employment_Information__r.Party__r.Document_Type__c, &apos;Alt&apos;),
AND(Employment_Information__c != NULL,
Employment_Information__r.Party__r.Legal_Entity_Type__c == &apos;Individual&apos;,
ISPICKVAL(Document_Type__c, &apos;Alt&apos;))),
IF(ISPICKVAL(Accountant_Letter_Verified__c, &apos;Yes&apos;), OR(ISPICKVAL(Accountant_Call__c, &apos;No&apos;), ISPICKVAL(Accountant_Call__c, &apos;&apos;)), FALSE), FALSE))</formula>
    <label>Accountant Call Warning Check</label>
    <type>Checkbox</type>
</CustomField>