force-app/main/default/objects/genesis__Income__c/fields/Accountant_Interview_Condition_Comp_Chec__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Interview_Condition_Comp_Chec__c</fullName>
    <formula>IF(ISPICKVAL(Party__r.Document_Type__c, &apos;Alt&apos;) &amp;&amp;
   (
       Party__r.Legal_Entity_Type__c = &apos;Company&apos; ||
       (
          ISPICKVAL(Party__r.Trust_Structure__c, &apos;Discretionary&apos;)||
          ISPICKVAL(Party__r.Trust_Structure__c, &apos;Fixed&apos;) ||
          ISPICKVAL(Party__r.Trust_Structure__c, &apos;Unit&apos;)  
       )
   ) &amp;&amp;
 INCLUDES(Company_Type_of_Documents_Sighted__c, &apos;Accountants Declaration&apos;) &amp;&amp;  ISPICKVAL(Accountant_Letter_Verified__c, &apos;Yes&apos;) &amp;&amp;
  NOT(ISPICKVAL(Accountant_Call__c, &apos;Yes&apos;))        
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Interview Condition Comp Chec</label>
    <type>Checkbox</type>
</CustomField>