force-app/main/default/objects/genesis__Income__c/fields/Accountant_Interview_Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Interview_Condition_Field__c</fullName>
    <formula>IF( IF(INCLUDES( Employment_Information__r.Party__r.Employment_Type__c , &apos;Self Employed&apos;), False, True) || Employment_Information__r.Party__r.Legal_Entity_Type__c &lt;&gt; &apos;Individual&apos; ||
IF(ISPICKVAL(Employment_Information__r.Document_Type__c , &apos;Alt&apos;), False, True) ||
IF( INCLUDES( Company_Type_of_Documents_Sighted__c , &apos;Accountants Declaration&apos;),False,True) ||
ISPICKVAL( Accountant_Call__c , &apos;Yes&apos;)
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Interview Condition Field</label>
    <type>Checkbox</type>
</CustomField>