force-app/main/default/objects/genesis__Income__c/fields/Accountant_Ph_Num_Verified_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Ph_Num_Verified_Warning_Check__c</fullName>
    <formula>IF(INCLUDES(Company_Type_of_Documents_Sighted__c,&apos;Accountants Declaration&apos;) == TRUE,IF((Party__r.Legal_Entity_Type__c != &apos;Individual&apos; &amp;&amp;  Party__r.Legal_Entity_Type__c != &apos;Joint&apos;),IF((OR(ISPICKVAL(Accountant_Phone_Number_Verified__c, &apos;No&apos;), ISPICKVAL(Accountant_Phone_Number_Verified__c, &apos;&apos;))), TRUE, FALSE) , IF(AND(Employment_Information__c != NULL,(OR(ISPICKVAL(Accountant_Phone_Number_independently_ve__c, &apos;No&apos;), ISPICKVAL(Accountant_Phone_Number_independently_ve__c, &apos;&apos;)))), TRUE, FALSE)),FALSE)</formula>
    <label>Accountant Ph Num Verified Warning Check</label>
    <type>Checkbox</type>
</CustomField>