force-app/main/default/objects/genesis__Income__c/fields/Accountant_Phone_Number_independently_ve__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Phone_Number_independently_ve__c</fullName>
    <label>Accountant Phone Number independently ve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>