force-app/main/default/objects/genesis__Income__c/fields/Accountant_Phone_Number_Verified__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Phone_Number_Verified__c</fullName>
    <label>Accountant Phone Number Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>