force-app/main/default/objects/genesis__Income__c/fields/BAS__c.field-meta.xml
<CustomField>
    <fullName>BAS__c</fullName>
    <label>BAS %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>