force-app/main/default/objects/genesis__Income__c/fields/BAS_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>BAS_Render_Check__c</fullName>
    <formula>INCLUDES(Type_of_Documents_Sighted__c, &apos;BAS&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAS Render Check</label>
    <type>Checkbox</type>
</CustomField>