force-app/main/default/objects/genesis__Income__c/fields/Business_Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Income_Type__c</fullName>
    <label>Business Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profit Before Tax</fullName>
            </value>
            <value>
                <fullName>Depreciation</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Non Cash Benefits</fullName>
            </value>
            <value>
                <fullName>Non Recurring Expenses</fullName>
            </value>
            <value>
                <fullName>Superannuation Excess</fullName>
            </value>
            <value>
                <fullName>Carry Forward Losses</fullName>
            </value>
            <value>
                <fullName>Amortisation Of Goodwill</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Allowances</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Car Expense</fullName>
            </value>
            <value>
                <fullName>Other Addback</fullName>
            </value>
            <value>
                <fullName>Payment To Director</fullName>
            </value>
            <value>
                <fullName>Addback</fullName>
                <isActive>false</isActive>
                <label>Addback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>