force-app/main/default/objects/genesis__Income__c/fields/Company_Type_of_Documents_Sighted__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_of_Documents_Sighted__c</fullName>
    <label>Company Type of Documents Sighted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountants Declaration</fullName>
            </value>
            <value>
                <fullName>Self-Certified Income and Repayment Declaration</fullName>
            </value>
            <value>
                <fullName>BAS</fullName>
            </value>
            <value>
                <fullName>Trading Statements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>