force-app/main/default/objects/genesis__Income__c/fields/Confirm_letter_prepared_by_accountant__c.field-meta.xml
<CustomField>
    <fullName>Confirm_letter_prepared_by_accountant__c</fullName>
    <label>Confirm letter prepared by accountant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>