force-app/main/default/objects/genesis__Income__c/fields/Confirm_stated_annual_income__c.field-meta.xml
<CustomField>
    <fullName>Confirm_stated_annual_income__c</fullName>
    <label>Confirm stated annual income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>