force-app/main/default/objects/genesis__Income__c/fields/Documents_Verified__c.field-meta.xml
<CustomField>
    <fullName>Documents_Verified__c</fullName>
    <label>Documents Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>