force-app/main/default/objects/genesis__Income__c/fields/Does_stated_income_include_rental_income__c.field-meta.xml
<CustomField>
    <fullName>Does_stated_income_include_rental_income__c</fullName>
    <label>Does stated income include rental income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>