force-app/main/default/objects/genesis__Income__c/fields/EmpCC_Employment_Basis__c.field-meta.xml
<CustomField>
    <fullName>EmpCC_Employment_Basis__c</fullName>
    <label>EmpCC  - Employment Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>