force-app/main/default/objects/genesis__Income__c/fields/EmpCC_Employment_Term__c.field-meta.xml
<CustomField>
    <fullName>EmpCC_Employment_Term__c</fullName>
    <label>EmpCC  - Employment Term</label>
    <type>Date</type>
</CustomField>