force-app/main/default/objects/genesis__Income__c/fields/EmpCC_Income_Gross_overtime_allowan__c.field-meta.xml
<CustomField>
    <fullName>EmpCC_Income_Gross_overtime_allowan__c</fullName>
    <label>EmpCC - Income (Gross, overtime, allowan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>