force-app/main/default/objects/genesis__Income__c/fields/EmpCC_Ongoing_Employment__c.field-meta.xml
<CustomField>
    <fullName>EmpCC_Ongoing_Employment__c</fullName>
    <label>EmpCC - Ongoing Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>