force-app/main/default/objects/genesis__Income__c/fields/Employer_Call_Verified_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Employer_Call_Verified_Warning_Check__c</fullName>
    <formula>AND(OR(ISPICKVAL( Employer_Call_Verified__c, &apos;No&apos;), ISPICKVAL( Employer_Call_Verified__c, &apos;&apos;)), PAYG_Income__c, Party__r.Legal_Entity_Type__c == &apos;Individual&apos;)</formula>
    <label>Employer Call Verified Warning Check</label>
    <type>Checkbox</type>
</CustomField>