force-app/main/default/objects/genesis__Income__c/fields/Employer_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Representative_Name__c</fullName>
    <label>Employer Representative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>