force-app/main/default/objects/genesis__Income__c/fields/Employment_Call_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Employment_Call_Commentary__c</fullName>
    <label>Employment Call Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>