force-app/main/default/objects/genesis__Income__c/fields/Employment_Call_Suitable_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Employment_Call_Suitable_Rule_Check__c</fullName>
    <formula>IF(PAYG_Income__c == true,&apos;Render&apos;, &apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Call Suitable Rule Check</label>
    <type>Text</type>
</CustomField>