force-app/main/default/objects/genesis__Income__c/fields/genesis__Taxable__c.field-meta.xml
<CustomField>
    <fullName>genesis__Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will define that income is taxable or not</description>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>