force-app/main/default/objects/genesis__Income__c/fields/GST_Suitable_Amount_Check__c.field-meta.xml
<CustomField>
    <fullName>GST_Suitable_Amount_Check__c</fullName>
    <formula>IF(NOT((genesis__Amount__c = 0) ||  ISBLANK( genesis__Amount__c ) ),&apos;Render&apos;, &apos;Not Render&apos;)</formula>
    <label>GST Suitable Amount Check</label>
    <type>Text</type>
</CustomField>