force-app/main/default/objects/genesis__Income__c/fields/Income_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Income_Commentary__c</fullName>
    <label>Income Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>