force-app/main/default/objects/genesis__Income__c/fields/Income_Consistant_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Income_Consistant_Rule_Check__c</fullName>
    <formula>IF(INCLUDES(Company_Type_of_Documents_Sighted__c,&apos;BAS&apos;) || INCLUDES(Company_Type_of_Documents_Sighted__c,&apos;Trading Statements&apos;),&apos;Render&apos;,&apos;Not Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Consistant Rule Check</label>
    <type>Text</type>
</CustomField>