force-app/main/default/objects/genesis__Income__c/fields/Income_Consistent_with_Declaration_Rende__c.field-meta.xml
<CustomField>
    <fullName>Income_Consistent_with_Declaration_Rende__c</fullName>
    <description>Income Consistent with Declaration Render</description>
    <formula>IF(OR(AND(INCLUDES(Company_Type_of_Documents_Sighted__c,&apos;BAS&apos;),INCLUDES(Company_Type_of_Documents_Sighted__c,&apos;Trading Statements&apos;)), INCLUDES(Company_Type_of_Documents_Sighted__c,&apos;&apos;)),&apos;Not Render&apos;,&apos;Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Consistent with Declaration Rende</label>
    <type>Text</type>
</CustomField>