force-app/main/default/objects/genesis__Income__c/fields/Income_Verification__c.field-meta.xml
<CustomField>
    <fullName>Income_Verification__c</fullName>
    <label>Income Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Verified</fullName>
            </value>
            <value>
                <fullName>Self Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>