force-app/main/default/objects/genesis__Income__c/fields/Income_Verification_Sighted__c.field-meta.xml
<CustomField>
    <fullName>Income_Verification_Sighted__c</fullName>
    <inlineHelpText>Company applicants must provide their current financial statements, tax returns and ATO assessment notices. Interim or draft financials are unacceptable. The most recent tax returns should be no more than 18 months old. [18.2.2]</inlineHelpText>
    <label>Income Verification Sighted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>