force-app/main/default/objects/genesis__Income__c/fields/Is_the_accountant_aware_of_any_circumsta__c.field-meta.xml
<CustomField>
    <fullName>Is_the_accountant_aware_of_any_circumsta__c</fullName>
    <label>Is the accountant aware of any circumsta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>