force-app/main/default/objects/genesis__Income__c/fields/Satisfactory_Explanation_Provided_Render__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_Explanation_Provided_Render__c</fullName>
    <description>Satisfactory Explanation Provided Render</description>
    <formula>IF(OR(ISPICKVAL(Income_Consistent_with_Declaration__c,&apos;No&apos;),ISPICKVAL(Income_Consistent_with_Declaration__c,&apos;&apos;)),&apos;Not Render&apos;,&apos;Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satisfactory Explanation Provided Render</label>
    <type>Text</type>
</CustomField>