force-app/main/default/objects/genesis__Income__c/fields/Self_Employment_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Self_Employment_Rule_Check__c</fullName>
    <formula>IF(ISPICKVAL(Document_Type__c,&apos;Alt&apos;) &amp;&amp; ISPICKVAL(Accountant_Letter_Verified__c,&apos;Yes&apos;) &amp;&amp; ISPICKVAL(Accountant_Call__c,&apos;Yes&apos;),&apos;Render&apos;,&apos;Not Render&apos;)</formula>
    <label>Self Employment Rule Check</label>
    <type>Text</type>
</CustomField>