force-app/main/default/objects/genesis__Income__c/fields/Supporting_Documentation_Sighted__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Documentation_Sighted__c</fullName>
    <label>Supporting Documentation Sighted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>