force-app/main/default/objects/genesis__Income__c/fields/Trust_Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Income_Type__c</fullName>
    <label>Trust Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Super Concessional Contribution</fullName>
            </value>
            <value>
                <fullName>Super Excess Concessional Contribution</fullName>
            </value>
            <value>
                <fullName>Super Non Concessional Contribution</fullName>
            </value>
            <value>
                <fullName>Annuities</fullName>
            </value>
            <value>
                <fullName>Dividends</fullName>
            </value>
            <value>
                <fullName>Interest Income</fullName>
            </value>
            <value>
                <fullName>Deemed Income</fullName>
            </value>
            <value>
                <fullName>Other Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>