force-app/main/default/objects/genesis__Income__c/fields/Type_of_Documents_Sighted_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Documents_Sighted_Warning_Check__c</fullName>
    <label>Type of Documents Sighted Warning Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warning1</fullName>
            </value>
            <value>
                <fullName>Warning2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>