force-app/main/default/objects/genesis__Income__c/fields/Unemployed_Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_Income_Type__c</fullName>
    <label>Unemployed Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government Benefit</fullName>
            </value>
            <value>
                <fullName>Private Pension</fullName>
            </value>
            <value>
                <fullName>Superannuation</fullName>
            </value>
            <value>
                <fullName>Other Income</fullName>
            </value>
            <value>
                <fullName>Newstart Allowance</fullName>
                <isActive>false</isActive>
                <label>Newstart Allowance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>