force-app/main/default/objects/genesis__Income__c/fields/Work_Allowance_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Work_Allowance_Frequency__c</fullName>
    <label>Work Allowance Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Frequency</valueSetName>
    </valueSet>
</CustomField>