force-app/main/default/objects/genesis__Income__c/fields/Workers_Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensation_Amount__c</fullName>
    <label>Workers Compensation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>